--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -30,7 +30,7 @@
     - mv nektar++-$(<VERSION).tar.gz tmp/nektar++_$(<VERSION).orig.tar.gz
     - tar -C tmp -xvf tmp/nektar++_$(<VERSION).orig.tar.gz
     - cp -a ${pkg_dir} tmp/nektar++-$(<VERSION)/debian
-    - sed -e s/DISTRIBUTION_ID/${distribution}/g < pkg/debian/changelog
+    - sed -e s/unstable/${distribution}/g < pkg/debian/changelog
             > tmp/nektar++-$(<VERSION)/debian/changelog
     - cd tmp/nektar++-$(<VERSION)
     - pwd
