--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -161,6 +161,25 @@ package-debian-buster-build:
     pkg_dir: pkg/debian/buster
     distribution: buster
 
+##
+## Debian Stretch
+##
+package-debian-stretch-env:
+  <<: *package-env-build
+  variables:
+    image_name: pkg/debian-stretch
+    dockerfile: docker/packaging/Dockerfile-debian-stretch
+
+package-debian-stretch-build:
+  <<: *package-deb-build
+  needs: ["package-debian-stretch-env"]
+  variables:
+    GIT_SUBMODULE_STRATEGY: normal
+    image_name: pkg/debian-stretch
+    pkg_dir: pkg/debian/stretch
+    distribution: stretch
+
+
 
 ##
 ## CentOS 7
