--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -144,7 +144,25 @@ package-debian-sid-build:
     distribution: unstable
 
 ##
-## Debian Buster
+## Debian bullseye
+##
+package-debian-bullseye-env:
+  <<: *package-env-build
+  variables:
+    image_name: pkg/debian-bullseye
+    dockerfile: docker/packaging/Dockerfile-debian-bullseye
+
+package-debian-bullseye-build:
+  <<: *package-deb-build
+  needs: ["package-debian-bullseye-env"]
+  variables:
+    GIT_SUBMODULE_STRATEGY: normal
+    image_name: pkg/debian-bullseye
+    pkg_dir: pkg/debian/bullseye
+    distribution: bullseye
+
+##
+## Debian buster
 ##
 package-debian-buster-env:
   <<: *package-env-build
@@ -162,7 +180,7 @@ package-debian-buster-build:
     distribution: buster
 
 ##
-## Debian Stretch
+## Debian stretch
 ##
 package-debian-stretch-env:
   <<: *package-env-build
