--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -215,6 +215,25 @@ package-ubuntu-bionic-build:
     pkg_dir: pkg/ubuntu/bionic
     distribution: bionic
 
+##
+## Ubuntu xenial
+##
+package-ubuntu-xenial-env:
+  <<: *package-env-build
+  variables:
+    image_name: pkg/ubuntu-xenial
+    dockerfile: docker/packaging/Dockerfile-ubuntu-xenial
+
+package-ubuntu-xenial-build:
+  <<: *package-deb-build
+  needs: ["package-ubuntu-xenial-env"]
+  variables:
+    GIT_SUBMODULE_STRATEGY: normal
+    image_name: pkg/ubuntu-xenial
+    pkg_dir: pkg/ubuntu/xenial
+    distribution: xenial
+
+
 
 
 ##
