--- a/solvers/ADRSolver/CMakeLists.txt
+++ b/solvers/ADRSolver/CMakeLists.txt
@@ -23,7 +23,8 @@ IF( NEKTAR_SOLVER_ADR )
         ./EquationSystems/UnsteadyReactionDiffusion.cpp
         ./EquationSystems/UnsteadyViscousBurgers.cpp
         ./EquationSystems/EigenValuesAdvection.cpp
-        ./EquationSystems/ALEDemo.cpp)
+        ./EquationSystems/ALEDemo.cpp
+        ./EquationSystems/ALEDemo2.cpp)
 
     #MMF advection
     ADD_NEKTAR_TEST        (TestMMFAdvPlane)
