--- a/solvers/CompressibleFlowSolver/CMakeLists.txt
+++ b/solvers/CompressibleFlowSolver/CMakeLists.txt
@@ -87,8 +87,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
     ADD_NEKTAR_TEST(Couette_WeakDG_LDG_adiabatic)
     # disabled as fails on 32-bit linux  -- cc
     #ADD_NEKTAR_TEST(Couette_FRDG_LFRDG_adiabatic)
-    # disabled as fails on 32-bit linux  -- cc
-    #ADD_NEKTAR_TEST(CylinderSubsonic_NS_WeakDG_LDG_SEM LENGTHY)
+    ADD_NEKTAR_TEST(CylinderSubsonic_NS_WeakDG_LDG_SEM)
     ADD_NEKTAR_TEST(CylinderSubsonic_NS_WeakDG_LDG_GAUSS LENGTHY)
     ADD_NEKTAR_TEST(CylinderSubsonic_NS_WeakDG_IP_GAUSS LENGTHY)
     ADD_NEKTAR_TEST(CylinderSubsonic_NS_FRDG_LFRDG_GAUSS LENGTHY)
