--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -124,13 +124,13 @@
 ##
 ## Debian sid
 ##
-package-debian-sid-env:
+.package-debian-sid-env:
   <<: *package-env-build
   variables:
     image_name: pkg/debian-sid
     dockerfile: docker/packaging/Dockerfile-debian-sid
 
-package-debian-sid-build:
+.package-debian-sid-build:
   <<: *package-deb-build
   needs: ["package-debian-sid-env"]
   variables:
