--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -224,6 +224,24 @@ package-debian-stretch-build:
     distribution: stretch
 
 ##
+## Ubuntu focal
+##
+package-ubuntu-focal-env:
+  <<: *package-env-build
+  variables:
+    image_name: pkg/ubuntu-focal
+    dockerfile: docker/packaging/Dockerfile-ubuntu-focal
+
+package-ubuntu-focal-build:
+  <<: *package-deb-build
+  needs: ["package-ubuntu-focal-env"]
+  variables:
+    GIT_SUBMODULE_STRATEGY: normal
+    image_name: pkg/ubuntu-focal
+    pkg_dir: pkg/ubuntu/focal
+    distribution: focal
+
+##
 ## Ubuntu bionic
 ##
 package-ubuntu-bionic-env:
