--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -58,7 +58,7 @@
   image: ${image_name}
   stage: package-test
   script:
-    - cd deb && dpkg -i nektar++-adrsolver_[1-9]*.deb libnektar++_[1-9]*.deb
+    - cd deb && dpkg -i nektar++-adr-solver_[1-9]*.deb libnektar++_[1-9]*.deb
     - cp $CI_PROJECT_DIR/solvers/ADRSolver/Tests/ImDiffusion_m12.xml .
     - ADRSolver ImDiffusion_m12.xml
     - test_output=`ADRSolver ImDiffusion_m12.xml | grep "L 2 error" | awk '{print ($7 < 2e-7)}'`
