--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -58,7 +58,7 @@
   image: ${image_name}
   stage: package-test
   script:
-    - cd deb && dpkg -i nektar++-adr-solver_[1-9]*.deb libnektar++_[1-9]*.deb
+    - cd deb && apt install ./nektar++-adr-solver_[1-9]*.deb ./libnektar++_[1-9]*.deb
     - cp $CI_PROJECT_DIR/solvers/ADRSolver/Tests/ImDiffusion_m12.xml .
     - ADRSolver ImDiffusion_m12.xml
     - test_output=`ADRSolver ImDiffusion_m12.xml | grep "L 2 error" | awk '{print ($7 < 2e-7)}'`
@@ -66,7 +66,7 @@
     - mpirun --allow-run-as-root -n 3 ADRSolver ImDiffusion_m12.xml
     - test_output=`mpirun --allow-run-as-root -n 3 ADRSolver ImDiffusion_m12.xml | grep "L 2 error" | awk '{print ($7 < 2e-7)}'`
     - if [ "$test_output" -eq 0 ]; then echo "Tolerance test failed on parallel ADRSolver run"; exit 1; fi
-    - cd deb && dpkg -i libnektar++-dev_[1-9]*.deb
+    - cd deb && apt install ./libnektar++-dev_[1-9]*.deb
     - cd $CI_PROJECT_DIR/templates/executable
     - ./test.sh /usr/lib/nektar++/cmake 3 /usr/bin/cmake
 
