--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -58,6 +58,7 @@
   image: ${image_name}
   stage: package-test
   script:
+    - sed -i 's/main$/main contrib non-free/g' /etc/apt/sources.list
     - apt update
     - cd deb && apt install ./nektar++-adr-solver_[1-9]*.deb ./libnektar++_[1-9]*.deb
     - cp $CI_PROJECT_DIR/solvers/ADRSolver/Tests/ImDiffusion_m12.xml .
